--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,38 @@
-version: '3.8'
 services:
   web:
-    image: nginx:latest
+    image: nginx:alpine
     ports:
-      - "80:80"
+      - "9000:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - .:/var/www/html
     depends_on:
       - php
+      - mysql
+
   php:
-    build:
-      context: .
-    expose:
-      - "9000"
+    image: php:8.2-fpm
     volumes:
       - .:/var/www/html
+    depends_on:
+      - mysql
+    environment:
+      DB_CONNECTION: mysql
+      DB_HOST: mysql
+      DB_PORT: 3306
+      DB_DATABASE: aqs_pmgt
+      DB_USERNAME: root
+      DB_PASSWORD: ""
+
+  mysql:
+    image: mysql:8.0
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes' # Allow empty password for root
+      MYSQL_DATABASE: aqs_pmgt
+    ports:
+      - "3306:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+
+volumes:
+  db_data:
