--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,31 +8,32 @@ services:
       - .:/var/www/html
     depends_on:
       - php
-      - mysql
+      - postgres 
 
   php:
     image: php:8.2-fpm
     volumes:
       - .:/var/www/html
     depends_on:
-      - mysql
+      - postgres 
     environment:
-      DB_CONNECTION: mysql
-      DB_HOST: mysql
-      DB_PORT: 3306
-      DB_DATABASE: aqs_pmgt
-      DB_USERNAME: root
-      DB_PASSWORD: ""
+      DB_CONNECTION: pgsql
+      DB_HOST: dpg-crlp6hlumphs73eau8rg-a
+      DB_PORT: 5432 
+      DB_DATABASE: aqs_pmgt_psql 
+      DB_USERNAME: aqs_pmgt_psql_user 
+      DB_PASSWORD: "qJMw1eqj6tbJhlwF7RMWfR30oiWcOdVG"  
 
-  mysql:
-    image: mysql:8.0
+  postgres:
+    image: postgres:13-alpine  
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes' # Allow empty password for root
-      MYSQL_DATABASE: aqs_pmgt
+      POSTGRES_DB: aqs_pmgt_psql  
+      POSTGRES_USER: aqs_pmgt_psql_user
+      POSTGRES_PASSWORD: "qJMw1eqj6tbJhlwF7RMWfR30oiWcOdVG"  
     ports:
-      - "3306:3306"
+      - "5432:5432" 
     volumes:
-      - db_data:/var/lib/mysql
+      - db_data:/var/lib/postgresql/data  
 
 volumes:
   db_data:
