--- a/nginx.conf
+++ b/nginx.conf
@@ -8,3 +8,7 @@ http {
 
     include /etc/nginx/conf.d/*.conf;
 }
+location ~ \.php$ {
+   include snippets/fastcgi-php.conf;
+   fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;  # Ensure the socket matches your PHP-FPM version
+}
